--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "izytechab/neo4jphp-ogm",
+    "name": "izytechAB/neo4jphp-ogm",
     "type": "library",
     "description": "Doctrine2-style entity mapper for Neo4j graph database",
     "keywords": ["neo4j","graph","database","entity-mapper","doctrine"],
