--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "prefer-stable": true,
     "autoload": {
         "psr-0": {
-            "izytechAB\\": "lib/"
+            "izytechAB": "lib/"
         }
     },
     "require-dev": {
