--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "izytechAB/neo4jphp-ogm",
+    "name": "izytechab/neo4jphp-ogm",
     "type": "library",
     "description": "Doctrine2-style entity mapper for Neo4j graph database",
     "keywords": ["neo4j","graph","database","entity-mapper","doctrine"],
@@ -7,7 +7,7 @@
     "license": "MIT",
     "authors": [
         {"name": "Louis-Philippe Huberdeau", "email": "lphuberdeau@gmail.com", "homepage": "http://lphuberdeau.com"},
-        {"name": "Thomas Alatal Berg", "email": "thomas@izytech.se", "homepage": "http://izytech.ses"}
+        {"name": "Thomas Alatalo Berg", "email": "thomas@izytech.se", "homepage": "http://izytech.se"}
     ],
     "require": {
         "php": ">=5.3.2",
