--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "doctrine/common": "^2.4.0",
+        "doctrine/common": "*",
         "everyman/neo4jphp": "*"
     },
     "minimum-stability": "dev",
