--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "everyman/neo4jphp": "*"
+        "everyman/neo4jphp": "*",
+        "doctrine/common": "^2.2.0"
+
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
